# PaperAgent

./: .gitignore  AI论文生成功能架构规划.md  BACKEND_ARCHITECTURE.md  BACKEND_ARCHITECTURE_ZH.md  CLAUDE.md  PA_DATA_PATH_CONFIG.md  README.md  chat.md  docker-compose.yml  package-lock.json  ws_demo.json
backend/: .env.example  .gitignore  Dockerfile  README.md  README_STRUCTURE.md  alembic.ini  auth.py  create_chat_tables.py  create_tables.sql  crud.py  docker-entrypoint.sh  main.py  models.py  pyproject.toml  schemas.py  test_ai_migration.py  test_ai_system.py  test_analyze_template.py  test_context_manager.py  test_imports.py  update_db.py
backend/ai_system/: README.md  __init__.py  chat_system.py  litellm_client.py  tool_framework.py  tools.py
backend/ai_system/config/: __init__.py  async_config.py  environment.py  logging_config.py
backend/ai_system/core/: agents.py  context_manager.py  llm_factory.py  llm_handler.py  main_agent.py  stream_manager.py
backend/ai_system/core_agents/: __init__.py  agent_base.py  code_agent.py  main_agent.py  review_agent.py  writer_agent.py
backend/ai_system/core_handlers/: __init__.py  llm_handler.py  llm_providers.py
backend/ai_system/core_managers/: __init__.py  context_manager.py  langchain_tool_manager.py  langchain_tools.py  mcp_client_manager.py  stream_manager.py  tool_manager.py  word_tools.py
backend/ai_system/core_tools/: __init__.py  code_executor.py  docx_tools.py  file_tools.py  image_inserter.py  template_tools.py  word_tools.py
backend/ai_system/tools/: __init__.py  code_executor.py  file_tools.py  template_agent_tools.py  template_operations.py  template_tools.py
backend/alembic/: env.py
backend/alembic/versions/: 1db1ebc908e4_add_provider_to_model_configs.py  2952aa9a98f3_initial_migration.py  736361c89d6a_add_output_format_to_paper_templates.py  8136c8a57cbb_add_provider_to_model_configs.py  8fd0f91dc04a_initial_migration.py  906ca23fbfe1_add_output_mode_to_works.py
backend/auth/: auth.py
backend/config/: __init__.py  paths.py
backend/database/: async_utils.py  database.py
backend/demo/: .env.example  README.md  demo.txt  demo_api.py  run.py  start_demo.py
backend/demo/workspace/: coffee_cooling_analysis.md  coffee_cooling_model.md
backend/docs/: AI_SYSTEM_MIGRATION_SUMMARY.md  CHAT_HISTORY_FORMAT_V2.md  DATABASE_MIGRATION_README.md  README_AI_SYSTEM.md  README_AUTH.md  README_WORKSPACE.md
backend/models/: models.py
backend/routers/: __init__.py  auth_router.py  chat_router.py  context_router.py  file_router.py  model_config_router.py  template_router.py  utils.py  work_router.py  workspace_file_router.py
backend/routers/auth_routes/: __init__.py  auth.py
backend/routers/chat_routes/: __init__.py  chat.py
backend/routers/config_routes/: __init__.py  context.py  model_config.py
backend/routers/file_routes/: __init__.py  file.py  template.py
backend/routers/mcp_routes/: __init__.py  mcp_status.py
backend/routers/work_routes/: __init__.py  work.py  workspace.py
backend/schemas/: schemas.py
backend/scripts/: migrate_chat_history.py
backend/services/: __init__.py  async_chat_service.py  chat_history_manager.py  chat_service.py  crud.py  template_files.py  utils.py  workspace_files.py
backend/services/chat_services/: __init__.py  chat_history_manager.py  chat_service.py  task_manager.py
backend/test/: demo.txt  demo.xml  test_llm.py  test_llm2.py
backend/tests/: test_template_contract.py
(+96 files in other folders)
