[project]
name = "backend"
version = "0.1.0"
description = "PaperAgent Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.48.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.4",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "numpy>=2.4.6",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "alembic>=1.18.4",
    "python-docx>=1.2.0",
    "Pillow>=12.2.0",
    "markdown>=3.10.2",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.11.9",
    "openpyxl>=3.1.5",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langchain-community>=0.4.2",
    "smolagents>=1.25.0",
    "ddgs>=9.14.4",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.3",
    "pygments>=2.20.0",
    "office-word-mcp-server",
]

[tool.uv.workspace]
members = [
    "office_word_mcp",
]

[tool.uv.sources]
office-word-mcp-server = { workspace = true }
