[project]
name = "backend"
version = "0.1.0"
description = "PaperAgent Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "requests>=2.34.0",
    "uvicorn[standard]>=0.46.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "aiosqlite>=0.21.0",
    "python-dotenv>=1.2.0",
    "pydantic[email]>=2.13.0",
    "pytest>=8.4.2",
    "numpy>=2.3.0",
    "matplotlib>=3.10.5",
    "scipy>=1.16.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "alembic>=1.17.0",
    "python-docx>=1.2.0",
    "Pillow>=12.2.0",
    "markdown>=3.9.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langchain-community>=0.4.1",
    "smolagents>=1.24.0",
    "ddgs>=9.6.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "pygments>=2.20.0",
]

[tool.uv.workspace]
members = []
