[project]
name = "backend"
version = "0.1.0"
description = "PaperAgent Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.4",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.13.4",
    "pytest>=9.1.1",
    "numpy>=2.5.0",
    "matplotlib>=3.11.0",
    "scipy>=1.18.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "alembic>=1.18.5",
    "python-docx>=1.2.0",
    "Pillow>=12.2.0",
    "markdown>=3.10.2",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.11.10",
    "openpyxl>=3.1.5",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-community>=0.4.2",
    "smolagents>=1.26.0",
    "ddgs>=9.14.4",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "pygments>=2.20.0",
]

[tool.uv.workspace]
members = []
